[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/bosses/octogonalBoss/sides/side2.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/bosses/octogonalBoss/sides/side7.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/bosses/octogonalBoss/sides/side1.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/bosses/octogonalBoss/sides/side6.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/bosses/octogonalBoss/sides/side8.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/bosses/octogonalBoss/sides/side5.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/bosses/octogonalBoss/sides/side3.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/bosses/octogonalBoss/sides/side4.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/bosses/octogonalBoss/OctogonalBoss.gd" type="Script" id=9]
[ext_resource path="res://src/bosses/octogonalBoss/Gunner.tscn" type="PackedScene" id=10]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.103896, 0.25974, 0.461039, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.515625, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1000.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=6]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 20, 20, 20 )

[node name="OctogonalBoss" type="Spatial"]
script = ExtResource( 9 )

[node name="sides" type="Spatial" parent="."]

[node name="side1" parent="sides" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30, 17 )

[node name="side2" parent="sides" instance=ExtResource( 1 )]
transform = Transform( -1, -7.57103e-08, -4.37114e-08, -7.57103e-08, 1, 0, 4.37114e-08, 0, -1, 0, 30, -15 )

[node name="side3" parent="sides" instance=ExtResource( 7 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -17, 26, 0 )

[node name="side4" parent="sides" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 16, 28, 0 )

[node name="side5" parent="sides" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0.920235, -22, 17 )

[node name="side6" parent="sides" instance=ExtResource( 4 )]
transform = Transform( -1, -8.9407e-08, -4.47035e-08, 0, -0.5, 0.866025, -8.9407e-08, 0.866025, 0.5, -0.0797653, -22, -18 )

[node name="side7" parent="sides" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0.866025, 0.5, 0, -0.5, 0.866025, 1, 3.78552e-08, 2.18557e-08, -16.0798, -22, 0 )

[node name="side8" parent="sides" instance=ExtResource( 5 )]
transform = Transform( 2.98023e-08, -0.866025, -0.5, 0, -0.5, 0.866025, -1, -4.47035e-08, -1.49012e-08, 15.9202, -22, 0 )

[node name="oneSecondTimer" type="Timer" parent="."]
autostart = true

[node name="Gunner" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.967362, 0.200548, -0.15489, -0.208622, 0.977273, -0.0375974, 0.14383, 0.0686838, 0.987216, 57, 0, 47 )

[node name="Gunner2" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.967362, 0.200548, -0.15489, -0.208622, 0.977273, -0.0375974, 0.14383, 0.0686838, 0.987216, -55, 0, 56 )

[node name="Gunner3" parent="." instance=ExtResource( 10 )]
transform = Transform( -0.389301, -0.118249, -0.913489, -0.208622, 0.977273, -0.0375974, 0.897174, 0.175937, -0.405123, -48, 0, -52 )

[node name="Gunner4" parent="." instance=ExtResource( 10 )]
transform = Transform( -0.897174, -0.175937, 0.405123, -0.208622, 0.977273, -0.0375974, -0.389301, -0.118249, -0.913489, 52, 0, -57 )

[node name="explodeParticles" type="Particles" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -1, 0 )
emitting = false
amount = 512
one_shot = true
explosiveness = 0.68
visibility_aabb = AABB( -128, -291, -232, 256, 582, 464 )
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 7 )

[node name="moveAroundTween" type="Tween" parent="."]
playback_process_mode = 0

[connection signal="bossDie" from="." to="." method="_on_OctogonalBoss_bossDie"]
[connection signal="moveToPhase2" from="." to="." method="_on_OctogonalBoss_moveToPhase2"]
[connection signal="moveToPhase3" from="." to="." method="_on_OctogonalBoss_moveToPhase3"]
[connection signal="timeout" from="oneSecondTimer" to="." method="_on_oneSecondTimer_timeout"]
[connection signal="tween_all_completed" from="moveAroundTween" to="." method="_on_moveAroundTween_tween_all_completed"]
